<resources>
    <string name="app_name">AiProject</string>
    <string name="login_title">登录</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="agreement_prefix">我已阅读并同意</string>
    <string name="agreement_link">《用户协议》和《隐私政策》</string>
    <string name="login_button">登录</string>
    <string name="toast_phone_error">请输入正确的手机号</string>
    <string name="toast_code_error">请输入验证码</string>
    <string name="toast_agreement_error">请先勾选协议</string>
    <string name="seconds_suffix">%ds</string>
    <string name="menu_orders">订单</string>
    <string name="menu_profile">我的</string>
    <string name="order_title">我的订单</string>
    <string name="profile_title">个人中心</string>
    <string name="user_name">张三</string>
    <string name="user_phone">138****8888</string>
    <string name="logout">退出登录</string>
    <string name="order_no">订单编号：</string>
    <string name="order_status_completed">已完成</string>
    <string name="order_status_pending">待支付</string>
    <string name="order_price_label">合计：</string>
    <string name="order_time_label">下单时间：</string>
    <string name="order_detail_title">商品详情</string>
    <string name="order_address_label">收货地址：</string>
    <string name="order_total_count">共%d件商品</string>
    
    <string name="profile_status_all">全部订单</string>
    <string name="profile_status_pending">待付款</string>
    <string name="profile_status_shipping">待收货</string>
    <string name="profile_status_comment">待评价</string>
    
    <string name="profile_menu_address">收货地址</string>
    <string name="profile_menu_coupon">优惠券</string>
    <string name="profile_menu_service">客服中心</string>
    <string name="profile_menu_settings">设置</string>

    <string name="dialog_logout_title">退出登录</string>
    <string name="dialog_logout_message">确定要退出当前账号吗？</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_cancel">取消</string>

    <string name="splash_status_init">正在初始化配置...</string>
    <string name="splash_status_done">更新完成！</string>
</resources>